--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -151,6 +151,7 @@ en:
         delete_common_column_def: "Common column definition [%{key}] was deleted."
         create_table_def: "Table definition [%{key}] was created."
         update_table_def: "Table definition [%{key}] was updated."
+        delete_table_def: "Table definition [%{key}] was deleted."
         create_column_def: "Column definition [%{key}] was created."
         update_column_def: "Column definition [%{key}] was updated."
         delete_column_def: "Column definition [%{key}] was deleted."
