--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -77,7 +77,7 @@ ja:
         physical_name: "物理名"
         logical_name: "論理名"
         unique: "ユニーク"
-        position: "順序"
+        position: "列順"
         note: "備考"
         column_defs: "列"
       history:
@@ -153,6 +153,7 @@ ja:
         delete_common_column_def: "共通列定義 [%{key}] を削除"
         create_table_def: "テーブル定義 [%{key}] を作成"
         update_table_def: "テーブル定義 [%{key}] を更新"
+        delete_table_def: "テーブル定義 [%{key}] を削除"
         create_column_def: "列定義 [%{key}] を作成"
         update_column_def: "列定義 [%{key}] を更新"
         delete_column_def: "列定義 [%{key}] を削除"
